# CHomP3-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  deny.toml
.config/: spellcheck.dic  spellcheck.toml
.github/workflows/: ci.yml
benches/: rotated_s1.rs  rotated_torus.rs  top_cube_sn.rs
benches/common/: datagen.rs  mod.rs
chompi/: Cargo.toml
chompi/src/: executor.rs  lib.rs
data/s1/: dim2.csv  dim3.csv  dim4.csv  dim5.csv  dim6.csv  dim7.csv  dim8.csv
data/torus/: dim3.csv  dim4.csv  dim5.csv  dim6.csv  dim7.csv  dim8.csv
scripts/: ci.sh
src/: algebra.rs  complexes.rs  executor.rs  homology.rs  lib.rs  logging.rs  mpi.rs  parallel.rs  prelude.rs  test_complexes.rs
src/algebra/: chain.rs  cyclic.rs  mod.rs  module.rs  ordered.rs  traits.rs
src/complexes/: cell_complex.rs  cubical.rs  cubical_util.rs  grading.rs  mod.rs  traits.rs
src/complexes/cubical/: graders.rs  iterators.rs
src/executor/: mpi.rs
src/homology/: coreduction.rs  cubical.rs  linked_list.rs  mod.rs  morse.rs  traits.rs  util.rs
src/homology/cubical/: builder.rs  config.rs  flow.rs  gradient.rs  mod.rs  orthant_matching.rs  parallel.rs  subgrid.rs  top_cubical.rs  wavefront.rs
src/homology/cubical/flow/: distributed.rs  frontier.rs  sequential.rs  wavefront.rs
src/homology/cubical/subgrid/: matching.rs  peaks.rs  subdivision.rs
src/parallel/: map.rs  mpi_utils.rs
test_utilities/: Cargo.toml
test_utilities/src/: lib.rs  top_cube_sn.rs  top_cube_torus.rs
testing/complexes/: cube_torus_complex.json  figure_eight_complex.json  triangle_complex.json
tests/: top_cube_sn.rs  top_cube_torus.rs
