[package]
name = "chomp3rs"
version = "0.3.1"
authors = ["Travis Casey"]
edition = "2024"
description = "Computational Homology Project 3"
readme = "README.md"
repository = "https://github.com/TravisCasey/CHomP3-rs"
license = "GPL-3.0-or-later"
keywords = ["homology", "topology"]
categories = ["mathematics"]
resolver = "3"

[features]
serde = ["dep:serde"]
mpi = ["dep:mpi", "dep:bincode", "serde"]

[[bench]]
name = "top_cube_sn"
harness = false

[[bench]]
name = "rotated_torus"
harness = false

[[bench]]
name = "rotated_s1"
harness = false

[profile.bench]
debug = true

[dependencies]
bincode = { version = "2.0.1", features = ["serde", "alloc"], optional = true }
flint-sys = "0.7.3"
itertools = "0.14.0"
mpi = { version = "0.8.0", features = ["derive"], optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
tracing = { version = "0.1.41", features = ["log"] }

[dev-dependencies]
divan = "0.1.21"
nalgebra = "0.33"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde_test = "1.0.177"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
len_without_is_empty = "allow"
unreadable_literal = "allow"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
