[package]
name = "chompi"
version = "0.1.0"
authors = ["Travis Casey"]
edition = "2024"
description = "MPI-based work-stealing executor for chomp3rs crate"
license = "MPL-2.0"
publish = false

[dependencies]
bincode = { version = "2.0.1", features = ["serde", "alloc"] }
mpi = { version = "0.8.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.41", features = ["log"] }
